--- a/Client/startwindow.ui
+++ b/Client/startwindow.ui
@@ -84,6 +84,19 @@
      <string>Exit</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="iaButton">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>460</y>
+      <width>131</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Jouer Contre l'IA</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -91,7 +104,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
