--- a/Client/startwindow.ui
+++ b/Client/startwindow.ui
@@ -88,13 +88,26 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>460</y>
+      <y>370</y>
       <width>131</width>
-      <height>71</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="text">
      <string>Jouer Contre l'IA</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSpectate">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>370</y>
+      <width>131</width>
+      <height>161</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Spectate</string>
     </property>
    </widget>
   </widget>
@@ -104,7 +117,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
